open and close fixes

--- a/UniFiler10/UniFiler10.csproj
+++ b/UniFiler10/UniFiler10.csproj
@@ -104,6 +104,7 @@
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
     <Compile Include="Controlz\LayoutTransformer.cs" />
+    <Compile Include="Controlz\OpenableObservableControl.cs" />
     <Compile Include="Converters\Converters.cs" />
     <Compile Include="InfoData\DynamicCategory.cs" />
     <Compile Include="InfoData\DynamicField.cs" />
