smarter open and close for OpenableControl + DB bug fix + smarter db updates

--- a/UniFiler10/UniFiler10.csproj
+++ b/UniFiler10/UniFiler10.csproj
@@ -132,7 +132,7 @@
     <Compile Include="Utilz\ObservableData.cs" />
     <Compile Include="InfoData\Briefcase.cs" />
     <Compile Include="DB\DBManager.cs" />
-    <Compile Include="DB\SQLite.cs" />
+    <Compile Include="DB\SQLiteLollo.cs" />
     <Compile Include="Controlz\TolerantListView.cs" />
     <Compile Include="Utilz\ProportionsTrigger.cs" />
     <Compile Include="ViewModels\BinderCoverVM.cs" />
@@ -285,7 +285,7 @@
     <SDKReference Include="Microsoft.VCLibs, Version=14.0">
       <Name>Visual C++ 2015 Runtime for Universal Windows Platform Apps</Name>
     </SDKReference>
-    <SDKReference Include="SQLite.UAP.2015, Version=3.9.1">
+    <SDKReference Include="SQLite.UAP.2015, Version=3.9.2">
       <Name>SQLite for Universal App Platform</Name>
     </SDKReference>
     <SDKReference Include="WindowsMobile, Version=10.0.10240.0">
