tidied up namespaces

--- a/UniFiler10/UniFiler10.csproj
+++ b/UniFiler10/UniFiler10.csproj
@@ -116,28 +116,27 @@
     <Compile Include="Controlz\TextBlockScaler.cs" />
     <Compile Include="Controlz\UniversalWrapPanel.cs" />
     <Compile Include="Converters\Converters.cs" />
-    <Compile Include="InfoData\DynamicCategory.cs" />
-    <Compile Include="InfoData\DynamicField.cs" />
-    <Compile Include="InfoData\DbBoundObservableData.cs" />
-    <Compile Include="InfoData\OpenableObservableData.cs" />
-    <Compile Include="InfoData\Wallet.cs" />
-    <Compile Include="InfoData\Binder.cs" />
-    <Compile Include="InfoData\RuntimeData.cs" />
-    <Compile Include="InfoData\Folder.cs" />
-    <Compile Include="InfoData\Document.cs" />
-    <Compile Include="Metadata\Category.cs" />
-    <Compile Include="Metadata\MetaBriefcase.cs" />
-    <Compile Include="Metadata\FieldDescription.cs" />
-    <Compile Include="Metadata\FieldValue.cs" />
-    <Compile Include="Services\AudioRecorder.cs" />
-    <Compile Include="Services\DocumentExtensions.cs" />
-    <Compile Include="Utilz\Constants.cs" />
+    <Compile Include="Data\InfoData\DynamicCategory.cs" />
+    <Compile Include="Data\InfoData\DynamicField.cs" />
+    <Compile Include="Data\InfoData\DbBoundObservableData.cs" />
+    <Compile Include="Data\InfoData\OpenableObservableData.cs" />
+    <Compile Include="Data\InfoData\Wallet.cs" />
+    <Compile Include="Data\InfoData\Binder.cs" />
+    <Compile Include="Data\Runtime\RuntimeData.cs" />
+    <Compile Include="Data\InfoData\Folder.cs" />
+    <Compile Include="Data\InfoData\Document.cs" />
+    <Compile Include="Data\Metadata\Category.cs" />
+    <Compile Include="Data\Metadata\MetaBriefcase.cs" />
+    <Compile Include="Data\Metadata\FieldDescription.cs" />
+    <Compile Include="Data\Metadata\FieldValue.cs" />
+    <Compile Include="Utilz\AudioRecorder.cs" />
+    <Compile Include="Utilz\DocumentExtensions.cs" />
+    <Compile Include="Data\Constants\Constants.cs" />
     <Compile Include="Utilz\IAnimationStarter.cs" />
-    <Compile Include="Utilz\Navigator.cs" />
     <Compile Include="Utilz\ObservableData.cs" />
-    <Compile Include="InfoData\Briefcase.cs" />
-    <Compile Include="DB\DBManager.cs" />
-    <Compile Include="DB\SQLiteLollo.cs" />
+    <Compile Include="Data\InfoData\Briefcase.cs" />
+    <Compile Include="Data\DB\DBManager.cs" />
+    <Compile Include="Data\DB\SQLiteLollo.cs" />
     <Compile Include="Controlz\TolerantListView.cs" />
     <Compile Include="Utilz\Pickers.cs" />
     <Compile Include="Utilz\ProportionsTrigger.cs" />
