import export todos

--- a/UniFiler10/UniFiler10.csproj
+++ b/UniFiler10/UniFiler10.csproj
@@ -133,6 +133,7 @@
     <Compile Include="Utilz\AudioRecorder.cs" />
     <Compile Include="Utilz\DocumentExtensions.cs" />
     <Compile Include="Data\Constants\Constants.cs" />
+    <Compile Include="Utilz\FileDirectoryExts.cs" />
     <Compile Include="Utilz\IAnimationStarter.cs" />
     <Compile Include="Utilz\ObservableData.cs" />
     <Compile Include="Data\InfoData\Briefcase.cs" />
