--- a/UniFiler10/UniFiler10.csproj
+++ b/UniFiler10/UniFiler10.csproj
@@ -212,6 +212,7 @@
     <Content Include="Assets\Flash40.png" />
     <Content Include="Assets\voice-200.png" />
     <None Include="Package.StoreAssociation.xml" />
+    <Content Include="Assets\WindowsStoreProxy.xml" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-200.png" />
     <Content Include="Assets\SplashScreen.scale-200.png" />
